--- a/Sample2-2.html
+++ b/Sample2-2.html
@@ -7,9 +7,9 @@
             .css1 {color: red;}
             .css2 {color: blue;}
         </style>
-        <script type="text/javascript">
-            // 在這裡的javascript會被調用的時候才執行
+        <script type="text/javascript">在這裡的javascript會被調用的時候才執行
             // 還沒載入body前
+            // 
             
         </script>
         <!--採用讀取外部javascript檔案的方式-->
@@ -18,7 +18,7 @@
     <body>
         <div id="div1" class="css1">fannie is a very beautiful girl!!</div>
 
-        <input type='button' value='addclass-新增一個css屬性' onclick="addclass()" /><br />
+        <input type='button' value='addclass-新增一個css屬性' onclick="addclass()" onb /><br />
         <input type='button' value='rmclass-移除一個指定的css屬性' onclick="removeclass()" />
         <script type="text/javascript">
             // 在這裡的javascript會在頁面載入的時候執行
